fix: bg image not showing

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    background-image: url(../images/homepage-bg.avif);
+    background-image: url(images/homepage-bg.avif);
     background-repeat: no-repeat;
     background-size: cover;
     overflow: none;
